--- a/client/Client/Shared/NavMenu.razor
+++ b/client/Client/Shared/NavMenu.razor
@@ -23,6 +23,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Custom Works
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="pfm/barcodes/check">
+                <span class="oi oi-plus" aria-hidden="true"></span> Check Barcode
+            </NavLink>
+        </div>
     </nav>
 </div>
 
