--- a/client/Client/Pages/Works/Custom.razor
+++ b/client/Client/Pages/Works/Custom.razor
@@ -122,7 +122,8 @@ else {
                 <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true" @onclick="@(() => DeleteLoadLine(line))">
                   <div class="d-flex gap-2 w-100 justify-content-between">
                     <div>
-                      <h6 class="mb-0">@line.BarcodeNo</h6>
+                      <h6 class="mb-1">@line.BarcodeNo</h6>
+                      <p class="mb-0 opacity-75">@line.ItemNo - @line.Description - @line.Size</p>
                     </div>
                     <small class="opacity-50 text-nowrap">@line.Quantity</small>
                   </div>
