fix: add company filter to stores and entities

--- a/admin/Client/Pages/Org/StoreAdd.razor
+++ b/admin/Client/Pages/Org/StoreAdd.razor
@@ -54,7 +54,7 @@
     
     protected override async Task OnInitializedAsync()
     {
-        Entities = await _client.GetFromJsonAsync<List<Entity>>("/api/entity");
+        Entities = await _client.GetFromJsonAsync<List<Entity>>($"api/entity?companyId={_stateContainer.Company.Id}");
     }
 
     
