--- a/admin/Client/Pages/Org/EntitiesList.razor
+++ b/admin/Client/Pages/Org/EntitiesList.razor
@@ -67,7 +67,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        Entities = await _client.GetFromJsonAsync<List<Entity>>("api/entity");
+        Entities = await _client.GetFromJsonAsync<List<Entity>>($"api/entity?companyId={_stateContainer.Company.Id}");
     }
 
     private bool FilterFunc1(Entity Entity) => FilterFunc(Entity, searchString1);
