--- a/admin/Client/Pages/Org/StoreEdit.razor
+++ b/admin/Client/Pages/Org/StoreEdit.razor
@@ -55,7 +55,7 @@
     
     protected override async Task OnInitializedAsync()
     {
-        Entities = await _client.GetFromJsonAsync<List<Entity>>("/api/entity");
+        Entities = await _client.GetFromJsonAsync<List<Entity>>($"api/entity?companyId={_stateContainer.Company.Id}");
         Store = await _client.GetFromJsonAsync<Store>($"/api/store/{Id}");
     }
 
