ui: fix home navigation link

--- a/admin/Client/Shared/NavMenu.razor
+++ b/admin/Client/Shared/NavMenu.razor
@@ -17,7 +17,7 @@
     <nav class="flex-column">
 
         <div class="nav-item px-3" role="button">
-            <NavLink class="nav-link" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" Match="NavLinkMatch.All" href="/">
                 <strong><span class="bi bi-house mx-2" style="font-size:1.2rem;"></span></strong> Home
             </NavLink>
         </div>
